--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ p{
 svg{
     align-self: center;
 }
+._small-text{
+    color: black;
+    font-size: 12px;
+    line-height: 14px;
+}
 ._container {
     margin: 0 auto;
     padding: 0 15px;
@@ -97,12 +102,11 @@ nav{
     gap: 30px;
 }
 .nav__button{
-    cursor:pointer;
     color: white;
     font-size: 14px;
     background-color: #95D7AE;
     border-radius: 15px;
-    border-style: none;
+    border-color: #95D7AE;
     width: 181px;
     height: 34px;
 }
@@ -112,10 +116,10 @@ main{
 .hero{
     position: relative;
     background-image: url("images/hero.png");
-    box-shadow: 0px 4px 4px 0px #00000040;
+    box-shadow: 0 4px 4px 0 #00000040;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 720px;
+    height: 100vh;
     width: 100%;
 }
 .hero__container{
@@ -126,7 +130,7 @@ main{
     max-width: 308px;
     p{
         font-size: 20px;
-        line-height: 20px                       ;
+        line-height: 20px;
     }
     h1{
         font-weight: normal;
@@ -140,19 +144,188 @@ main{
 .contacts__container{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     min-height: 346px;
+    gap: 45px;
 }
-.
+.contacts__info{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    align-content: center;
+}
 
 .contacts__map-img{
     max-width: 624px;
-    min-height: 346px;
+    min-height: 370px;
     border-radius: 20px;
+}
+.contacts__item{
+    display: flex;
+    flex-direction: column;
+}
+.contacts__header{
+    font-size: 20px;
+    font-weight: normal;
+}
+.contacts__address{
+    display: flex;
+    max-width: 180px;
+    gap: 5px;
+    min-height: 28px;
+}
+.contacts__address-text{
+    flex: 1;
+}
+.contacts__mail{
+    display: flex;
+    gap: 5px;
+    margin-top: 10px;
+}
+.contacts__phones{
+    min-width: 180px;
+}
+.contacts__work-time{
+    display: flex;
+    gap: 5px;
+}
+.contacts__time{
+    display: flex;
+    gap: 5px;
+    margin-top: 10px;
+}
+.contacts__requisites{
+    display: flex;
+    flex-wrap: wrap;
+}
+.contacts__requisites-lists{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.contacts__address-list-item{
+    display: flex;
+    max-width: 202px;
+    gap: 10px;
+}
+.contacts__list-info{
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+}
+.contacts__list-info-item{
+    color: black;
+}
+.contacts__company-name{
+    display: flex;
+    gap: 10px;
 }
 
 
+.form{
+    position: relative;
+    margin-top: 70px;
+}
+.form__main-container{
+    padding: 50px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+    background-color: #7BAE7F;
+    border-radius: 20px;
+}
+.form__header{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+}
+.form__main-heading{
+    color: #FCEFF9;
+    font-size: 28px;
+    font-weight: normal;
+}
+.form__header-text{
+    color: #FCEFF9;
+    font-size: 16px;
+    line-height: 16px;
+    text-align: center;
+}
+.form__button{
+    color: white;
+    font-size: 14px;
+    background-color: #95D7AE;
+    border-radius: 15px;
+    border-color: #95D7AE;
+    width: 181px;
+    height: 34px;
+}
 
+.services{
+    position: relative;
+    margin-top: 70px;
+}
+.services__container{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+}
+.services__main-header{
+    font-size: 28px;
+    font-weight: normal;
+}
+.services__swiper{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.swiper__header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.swiper__name{
+    font-weight: normal;
+    font-size: 28px;
+}
+.swiper__header-actions{
+    display: flex;
+    gap: 10px;
+}
+.swiper__button{
+    box-shadow: 0 0 5px 0 #00000040;
+    background-color: #7BAE7F;
+    color: white;
+    min-width: 40px;
+    min-height: 40px;
+    border-color: #7BAE7F;
+    border-radius: 15px;
+}
+.swiper__list{
+    display: flex;
+    justify-content: space-between;
+    gap: 62px;
+}
+.swiper__text-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #7BAE7F;
+    border-radius: 20px;
+    padding: 15px;
+    gap: 15px;
+}
+.swiper__text-block-heading{
+    font-size: 16px;
+    color: white;
+    font-weight: normal;
+}
+.swiper__text{
+    color: white;
+    text-align: center;
+    line-height: 14px;
+}
 
 footer{
     position: relative;
